--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body,td,th {
   <table width="100%" border="0">
     <tbody>
       <tr>
-        <th height="23" colspan="5" bgcolor="#D50000" scope="col"><p><img src="file:///C|/Axel C. Tj/Web Design/Team Web Design.jpg" width="1167" height="600" alt=""/></p></th>
+        <th height="23" colspan="5" bgcolor="#D50000" scope="col"><p><img src="Team Web Design.jpg" width="1051" height="568" alt=""/></p></th>
       </tr>
       <tr>
         <td width="25%" bgcolor="#D50000">&nbsp;</td>
@@ -51,8 +51,8 @@ body,td,th {
       <tr>
         <td width="25%" height="157" bgcolor="#D50000">&nbsp;</td>
         <td width="15%" bgcolor="#D50000"><p><img src="Sejarah Bola.jpg" width="265" height="153" alt=""/></p></td>
-        <td width="15%" bgcolor="#D50000"><p><img src="file:///C|/Axel C. Tj/Web Design/Berita dan First Team.jpg" width="353" height="175" alt=""/></p></td>
-        <td width="15%" bgcolor="#D50000"><p><img src="file:///C|/Axel C. Tj/Web Design/Jadwal Pertandingan.jpg" width="308" height="168" alt=""/></p></td>
+        <td width="15%" bgcolor="#D50000"><p><img src="Berita dan First Team.jpg" width="346" height="176" alt=""/></p></td>
+        <td width="15%" bgcolor="#D50000"><p><img src="Jadwal Pertandingan.jpg" width="359" height="188" alt=""/></p></td>
         <td width="25%" bgcolor="#D50000">&nbsp;</td>
       </tr>
     </tbody>
